@@ -2,6 +2,16 @@
 
 	Apply mainline patches
 	2011-10-10  Alan Modra  <amodra@gmail.com>
+	* ldmain.c (main): Move code twiddling various config and link_info
+	bits to..
+	* lexsup.c (parse_args): ..here.  Move plugin_load_plugins call
+	into main.
+	* plugin.c (set_tv_header): Test link_info.executable, not
+	link_info.shared.
+	(is_visible_from_outside): Likewise.  Delete redundant
+	is_ir_dummy_bfd check and "section" parameter.
+
+	2011-10-10  Alan Modra  <amodra@gmail.com>
 	* emultempl/ppc64elf.em (ppc_add_stub_section): Align to 32 bytes.
 
 	2011-10-06  Alan Modra  <amodra@gmail.com>
